# template-micro-service

./: Cargo.toml
src/lib/: infrastructure.rs
src/lib/application/: Cargo.toml  http.rs
src/lib/application/ports/: messaging_ports.rs
src/lib/domain/: Cargo.toml
src/lib/infrastructure/: Cargo.toml  env.rs
src/lib/infrastructure/messaging/: pubsub.rs
src/lib/infrastructure/src/: env.rs
