[package]
name = "rust-api-boilerplate"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/main.rs"
name = "server"


[dependencies]
domain = { path = "src/lib/domain" }
application = { path = "src/lib/application" }
infrastructure = { path = "src/lib/infrastructure" }

anyhow = "1.0.95"
axum = "0.8.1"
clap = { version = "4.5.23", features = ["derive", "env"] }
dotenv = "0.15.0"
firestore = "0.44.0"
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
